samples/_failures_safe/1761626564_b7b115_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f32288b1.c: In function ‘print_high_severity_entries’:
./samples/SAFE/__tmp_f32288b1.c:125:16: error: missing terminating " character
  125 |         printf("No entries found with severity >=
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f32288b1.c:125:9: error: expected expression at end of input
  125 |         printf("No entries found with severity >=
      |         ^~~~~~
./samples/SAFE/__tmp_f32288b1.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f32288b1.c:125:9: error: expected declaration or statement at end of input
